test/modules/standard/FileSystem/lydia/copyTree/no_src.good
no_src.chpl:3: error: Not a directory in copyTree(shesNotThere, pleaseDontBotherTryingToFindHer)
