test/modules/standard/FileSystem/lydia/copyTree/no_src.chpl
use FileSystem;

copyTree("shesNotThere", "pleaseDontBotherTryingToFindHer");
// Try copying a directory that doesn't exist.
